--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fra-standalone",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
   "bin": "index.js",
   "scripts": {
@@ -20,6 +20,8 @@
     "chalk": "^1.1.3",
     "chokidar": "^1.4.3",
     "express": "^4.13.4",
-    "getsandbox-express": "^1.0.0"
+    "getsandbox-express": "^1.0.0",
+    "require-reload": "^0.2.2",
+    "tree-kill": "^1.0.0"
   }
 }
