--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "chokidar": "^1.4.3",
     "express": "^4.13.4",
     "getsandbox-express": "^1.0.0",
+    "htmlparser2": "^3.9.0",
+    "http-proxy": "^1.13.2",
     "require-reload": "^0.2.2",
     "tree-kill": "^1.0.0"
   }
