--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fra-standalone",
-  "version": "1.0.5",
+  "version": "1.1.0",
   "description": "",
   "bin": "index.js",
   "scripts": {
@@ -21,6 +21,7 @@
     "chokidar": "^1.4.3",
     "express": "^4.13.4",
     "getsandbox-express": "^1.0.0",
+    "harmon": "^1.3.1",
     "htmlparser2": "^3.9.0",
     "http-proxy": "^1.13.2",
     "require-reload": "^0.2.2",
