--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "http-proxy": "^1.13.2",
     "require-reload": "^0.2.2",
     "tree-kill": "^1.0.0"
+  },
+  "devDependencies": {
+    "longjohn": "^0.2.11"
   }
 }
